8211735: Wrong heap mapper can be selected with UseLargePages on G1

Reviewed-by: tschatzl, kbarrett